--- a/My_Portfolio_Website/My_Portfolio_Website.html
+++ b/My_Portfolio_Website/My_Portfolio_Website.html
@@ -182,7 +182,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
           <div class="card All GitHub">
             <div class="card-image"><img src="./Images/Thumb/github.jpg" alt=""></div>
             <div class="card-info">
-              <a href="https://github.com/julianne-murdock/HTML-and-CSS-Course/tree/main/Project%20Directory/Space_Website_Project" target="_blank"><h3>Portfolio Website</h3></a>
+              <a href="https://github.com/julianne-murdock/Portfolio" target="_blank"><h3>Portfolio Website</h3></a>
               <p>These are the files for how I made this website you are looking at right now!</p>
             </div>
           </div>
