--- a/My_Portfolio_Website/My_Portfolio_Website.html
+++ b/My_Portfolio_Website/My_Portfolio_Website.html
@@ -175,8 +175,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Raleway", sans-serif}
           <div class="card All GitHub">
             <div class="card-image"><img src="./Images/Thumb/github.jpg" alt=""></div>
             <div class="card-info">
-               <a href="https://github.com/julianne-murdock/HTML-and-CSS-Course/tree/main/Project%20Directory/My_Portfolio_Website" target="_blank"><h3>Portfolio Website</h3></a>
-              <p>These are the files for how I made this website you are looking at right now!</p>
+               <a href="https://github.com/julianne-murdock/HTML-and-CSS-Course" target="_blank"><h3>HTML and CSS Course</h3></a>
+              <p>This is the recent course I just finished at The Tech Academy! I can't wait to finish my Java script course soon!</p>
             </div>
           </div>
           <div class="card All GitHub">
